# jpholiday

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  jpholiday  run.sh
include/: Date.h  DateList.h
src/: Date.cpp  DateList.cpp  main.cpp
